# Quiz_bot

./: .gitignore  README.md  pyproject.toml
quiz_bot/: bot.py  db.py  handlers.py  handlers_func.py  questions.py
quiz_bot/scripts/: start.py
